# BasicCppCMakeProject

./: .gitmodules  CMakeLists.txt
app/: main.cpp
include/: dynamic_lib.h  static_lib.h
include/header_only/: math_utils.h
src/dynamic_lib/: dynamic_lib.cpp
src/static_lib/: static_lib.cpp
